--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,12 +20,13 @@
     <string name="title_launch_rocket">Launch a rocket (LinearInterpolation)</string>
     <string name="title_spin_rocket">Rotate a rocket (FastOutSlowInInterpolator)</string>
     <string name="title_launch_rocket_2">Launch a rocket (AccelerateInterpolator)</string>
-    <string name="title_launch_rocket_3">Launch a rocket (ObjectAnimator, AccelerateInterpolator)</string>
+    <string name="title_launch_rocket_3">Launch a rocket (ObjectAnimator, AccelerateInterpolator)
+    </string>
     <string name="launch_spin">Launch and spin (AnimatorSet)</string>
     <string name="launch_spin_viewpropertyanimator">Launch and spin (ViewPropertyAnimator)</string>
     <string name="title_with_doge">Don\'t leave Doge behind (Animating two objects)</string>
     <string name="title_animation_events">Animation events</string>
     <string name="title_there_and_back">Fly there and back (Animation options)</string>
     <string name="title_jump_and_blink">Jump and blink (Animations in XML)</string>
-    <string name="title_color_animation">Background color</string>
+    <string name="title_color_animation">Background color (ObjectAnimator)</string>
 </resources>
