--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,8 +23,8 @@
     <string name="title_launch_rocket_3">Launch a rocket 3 (ObjectAnimator, AccelerateInterpolator)
     </string>
     <string name="title_color_animation">Background color (object animator)</string>
-    <string name="launch_spin">Launch and spin (AnimatorSet)</string>
-    <string name="launch_spin_viewpropertyanimator">Launch and spin (ViewPropertyAnimator)</string>
+    <string name="launch_spin_1">Launch and spin (AnimatorSet)</string>
+    <string name="launch_spin_2">Launch and spin (ViewPropertyAnimator)</string>
     <string name="title_with_doge">Don\'t leave Doge behind (Animating two objects)</string>
     <string name="title_animation_events">Animation events</string>
     <string name="title_there_and_back">Fly there and back (Animation options)</string>
